--- a/favourite.html
+++ b/favourite.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="./src/css/styles.css" />
+    <title>Document</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
+          <li><a href="index.html" id="home-link">Home</a></li>
           <li>
-            <a href="index.html" class="home-link active">Home</a>
-          </li>
-          <li>
-            <a href="./favourite.html" id="favorites-link">Favorites</a>
+            <a href="favourite.html" id="favorites-link active">Favorites</a>
           </li>
         </ul>
       </nav>
@@ -24,7 +22,6 @@
         placeholder="Search movies by title"
       />
     </header>
-    <div id="movies-container"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
