--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
         id="search-input"
         placeholder="Search movies by title"
       />
+      <div id="search-feedback">
+        <p id="search-feedback-invalid" style="color: red; display: none;">Invalid search query.</p>
+    </div>
+    
     </header>
-    <div id="movies-container"></div>
+    <div id="movies-container">
+      <!-- <img id="default-image" src="hhttps://amicus-vet.ru/images/statii/golubaya.jpg" alt="Default Image"> -->
+    </div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
