--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <ul>
           <li>
@@ -18,6 +18,22 @@
           </li>
         </ul>
       </nav>
+    </header>
+      <div class="container">
+        <section class="filters">
+            <div class="container">
+                <input type="text" placeholder="Buscar películas...">
+                <select name="genre" id="genre">
+                    <option value="">Todos los géneros</option>
+                    <option value="drama">Drama</option>
+                    <option value="comedy">Comedia</option>
+                    <option value="horror">Horror</option>
+                    <option value="action">Acción</option>
+                    <button class="button">Favorito</button>
+                </select>
+            </div>
+        </section>
+        
       <input
         type="text"
         id="search-input"
@@ -27,7 +43,9 @@
         <p id="search-feedback-invalid" style="color: red; display: none;">Invalid search query.</p>
     </div>
     
-    </header>
+    <h2>¿Que quieres ver hoy?:</h2>
+
+
     <div id="movies-container">
       <!-- <img id="default-image" src="hhttps://amicus-vet.ru/images/statii/golubaya.jpg" alt="Default Image"> -->
     </div>
