mikel sigue cambiando

--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       <p id="search-feedback-invalid" style="color: red; display: none;">Invalid search query.</p>
       
   </div>
+
+
+
+<div>
+  <select id="genre-filter">
+    <option value="">All genre</option>
+    <option value="">risa</option>
+    <option value="">riso</option>
+  </select>
+</div>
+  
+  
+
+
+
 </header>
 <div id="movies-container"></div>
 
