cambios de lander

--- a/favourite.html
+++ b/favourite.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/styles.css" />
     <title>Document</title>
+    
+    <script src="index.js" type="module"></script>
+
   </head>
   <body>
     <header>
@@ -22,6 +25,19 @@
         placeholder="Search movies by title"
       />
     </header>
-    <script src="index.js" type="module"></script>
+
+    <h1>Favorite Movies</h1>
+    <div id="favorites-container"></div>
+<div id="modal" class="modal">
+  
+    <div id="modal-content" class="modal-content">
+        
+        <div id="modal-poster"></div>
+        <div id="modal-info" class="modal-info"></div>
+    </div>
+</div>
+
+
+
   </body>
 </html>
