--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <input
         type="text"
         id="search-input"
-        placeholder="Search movies by title"
-    />
+        placeholder="Search movies by title"/>
     <div id="search-feedback">
       <p id="search-feedback-invalid" style="color: red; display: none;">Invalid search query.</p>
       
