diseno cards, header

--- a/favourite.html
+++ b/favourite.html
@@ -10,18 +10,16 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html" id="home-link">Home</a></li>
+          <li><a href="index.html" class="home-link">Home</a></li>
           <li>
-            <a href="favourite.html" id="favorites-link active">Favorites</a>
+            <a href="favourite.html" class="home-link  active">Favorites</a>
           </li>
         </ul>
       </nav>
-      <input
-        type="text"
-        id="search-input"
-        placeholder="Search movies by title"
-      />
     </header>
+    <main>
+      <div id="favourite-movies-container"></div>
+    </main>
     <script src="index.js" type="module"></script>
   </body>
 </html>
