--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
 
     
-    <div class="bottom-row">
-      <h2>Wanna see a movie?:</h2>
+    <div class="container">
+      <h2 >Wanna see a movie?:</h2>
     </div>
   </div>
 
