boton de remove from modal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!-- Filtro de géneros -->
       <select id="genre-filter" onchange="fetchPopularMovies(this.value)"> 
-        <option value="">Todos los géneros</option>
+        <option value="">All the genres</option>
         <option value="28">Action</option>
         <option value="12">Adventure</option>
         <option value="16">Animation</option>
@@ -61,7 +61,7 @@
 
     
     <div class="container">
-      <h2 >Wanna see a movie?:</h2>
+      <h2 >Want to watch a movie?:</h2>
     </div>
   </div>
 
